--- a/site/content/intro.mdx
+++ b/site/content/intro.mdx
@@ -1,8 +1,7 @@
 ---
 description: Introduction to the project
-title: Introduction
+title: Project Status
 ---
 
-Summary of the project and where its useful.
-
-`ms-gh-pages` is a website template for Morgan Stanley OSS projects using [GatsbyJS](https://www.gatsbyjs.com/) static site generator.
+![Lifecycle Active](https://badgen.net/badge/Lifecycle/Active/green)
+[![CI](https://github.com/morganstanley/Crossroads/actions/workflows/continuous-integration.yml/badge.svg)](https://github.com/morganstanley/Crossroads/actions/workflows/continuous-integration.yml)
