--- a/site/content/use-cases.mdx
+++ b/site/content/use-cases.mdx
@@ -1,15 +1,11 @@
 ---
 description: Description of a simple but comprehensive use case for the
   project
-title: Use cases
+title: Why Use Crossroads
 ---
 
-Description of a simple but comprehensive use case for the project.
+Crossroads allows you to:
 
-#### Open Source Project Marketing Site
-
-A Morgan Stanley Open Source project should use this template for the project marketing site in most cases.
-
-#### opensource.morganstanley.com
-
-External facing marketing site highlighting the Firm's open source initiatives.
+- create an executable package.
+- customise your package with a name, icon, version and other attributes
+- run applications through crossroads generated package
