--- a/site/content/hero.mdx
+++ b/site/content/hero.mdx
@@ -3,10 +3,14 @@ description: Featured content hero
 title: Hero
 ---
 
-<Hero title="Project Name">
-  Marketing elevator pitch about the project. What language is it written in?
-  Why would someone want to contribute?
-  <a variant="outlined" href="news/">
-    Learn More...
+<Hero title="Crossroads">
+  Crossroads is a dotnet core commandline tool packager for developers. This is
+  a generic solution to host any application within Crossroads package
+  executable and further launches application's executable. Developers will
+  specify arguments such as name, icon, version etc for branding during the
+  package generation. The specified argument name will be used to rebrand the
+  internal application.
+  <a variant="outlined" href="https://github.com/morganstanley/Crossroads">
+    Project Repo
   </a>
 </Hero>
