--- a/site/content/hero.mdx
+++ b/site/content/hero.mdx
@@ -10,6 +10,10 @@ title: Hero
   specify arguments such as name, icon, version etc for branding during the
   package generation. The specified argument name will be used to rebrand the
   internal application.
+
+![Lifecycle Active](https://badgen.net/badge/Lifecycle/Active/green)
+[![CI](https://github.com/morganstanley/Crossroads/actions/workflows/continuous-integration.yml/badge.svg)](https://github.com/morganstanley/Crossroads/actions/workflows/continuous-integration.yml)
+
   <a variant="outlined" href="https://github.com/morganstanley/Crossroads">
     Project Repo
   </a>
