add Linux to development docs

--- a/site/content/documentation/development.mdx
+++ b/site/content/documentation/development.mdx
@@ -28,4 +28,73 @@ dotnet publish .\src\Crossroads\Crossroads.csproj -c:release --no-build
 
 ### Crossroads on Linux
 
-For information about how to use our application on the linux environment kindly <a href="https://github.com/morganstanley/Crossroads/blob/main/doc/Linux.md" target="_blank">click here</a>.
+#### Installation
+
+To install crossroads as a global dotnet tool on the linux environment:
+
+```sh
+dotnet tool install -g MorganStanley.Crossroads
+```
+
+To get the list of available commands:
+
+```sh
+crossroads --help
+```
+
+#### How to use
+
+##### Package Python
+
+```sh
+ crossroads package --name newnotepad --command "python3"
+```
+
+##### Package Python and add a script file from include
+
+```sh
+crossroads package --name newhello  --command "python3" --args "script/crosspy.py" --location "./output" --include "../script"
+```
+
+##### Inspect a package
+
+```sh
+ crossroads inspect --package "./newhello"
+```
+
+##### Show help
+
+```sh
+crossroads --help
+```
+
+##### Execute generated app
+
+```sh
+./<appname>
+```
+
+#### How to Develop
+
+##### Build the solution
+
+```sh
+dotnet build
+```
+
+##### Test and test with coverage
+
+```sh
+dotnet test
+```
+
+```sh
+dotnet test -maxcpucount:1 -p:CollectCoverage=true -p:CoverletOutput="../TestResults/" -p:MergeWith="../TestResults/coverage.json"
+```
+
+##### Deploy
+
+```sh
+dotnet build -c:release
+dotnet publish ./src/Crossroads/Crossroads.csproj -c:release --no-build
+```
