chore(github-pages): update alternatives.mdx

--- a/site/content/alternatives.mdx
+++ b/site/content/alternatives.mdx
@@ -3,8 +3,7 @@ description: List of alternatives and how they differ from this project
 title: Alternatives
 ---
 
-List of alternatives and how they differ from this project.
-
-- A [Docusaurus](https://docusaurus.io/) version of this template will also be available in the future.
-- unbranded templates from various static site generator tools
-- `readme.md`
+Electron Packager - it only focuses on Electron based applications
+Electron Forge - it only focuses on Electron based applications
+.NET Packager - it only focuses on .NET based applications
+PyInstaller - it only focuses on Python based applications
